<resources>
    <string name="app_name">My Movies</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="year2">Year</string>
    <string name="movie_id">Movie ID</string>
    <string name="movie_title">Movie Title</string>
    <string name="genre2">Genre</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="add_new_movie">Add New Movie</string>
    <string name="movie_title2">Movie Title</string>
    <string name="genre3">Genre</string>
    <string name="year3">Year</string>
    <string name="insert">INSERT</string>
    <string name="show_list">SHOW LIST</string>
</resources>