<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    android:paddingEnd="22dp"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="@string/edit_movie"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_id"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/etMovieId"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="none"
        android:textColor="#FFFFFF"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/movie"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/movie_title"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/genres"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/genre2"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/year"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/year2"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            app:srcCompat="@drawable/restricted"
            android:importantForAccessibility="no" />

        <Spinner
            android:id="@+id/spnRatings"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#000000"
            android:popupBackground="@color/black"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>